--- a/distributedforcs2026/week4/student_pubsub_lab.ipynb
+++ b/distributedforcs2026/week4/student_pubsub_lab.ipynb
@@ -89,20 +89,21 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "import os\n",
     "\n",
     "# --- FILL IN YOUR CREDENTIALS ---\n",
     "# Your instructor will provide these. They are shared for the class.\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"]     = \"\"  # paste your access key\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"\"  # paste your secret key\n",
-    "os.environ[\"AWS_DEFAULT_REGION\"]    = \"us-east-1\"\n",
+    "os.environ['AWS_ACCESS_KEY_ID'] = ''\n",
     "\n",
+    "os.environ['AWS_SECRET_ACCESS_KEY'] = ' '\n",
+    "\n",
+    "os.environ['AWS_DEFAULT_REGION'] =  ''\n",
     "# --- YOUR IDENTITY ---\n",
     "# Enter your first name in lowercase. This determines which queue you read from.\n",
-    "MY_NAME = \"\"  # e.g. \"bilge\", \"sam\", \"phin\", \"manuel\", \"bruno\""
+    "MY_NAME = \"gil\"  # e.g. \"bilge\", \"sam\", \"phin\", \"manuel\", \"bruno\""
    ],
    "outputs": [],
    "execution_count": null
@@ -158,20 +159,18 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "# ========================================================\n",
-    "# HELPER FUNCTIONS â€” used throughout the entire lab\n",
+    "# HELPER FUNCTIONS — verbose edition\n",
+    "# Shows exactly what is sent to AWS and what comes back\n",
     "# ========================================================\n",
     "\n",
     "# --- Resource Configuration ---\n",
-    "# These are the AWS resources your instructor has already created.\n",
-    "\n",
     "TOPIC_ARN = \"arn:aws:sns:us-east-1:194722398367:ds2032-view-events.fifo\"\n",
     "FIFO_MESSAGE_GROUP = \"view-events\"\n",
     "\n",
-    "# Tier 1: simple standard queues (Section 1 only -- private, NOT connected to SNS)\n",
     "SIMPLE_QUEUES = {\n",
     "    \"bilge\":  \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-simple-bilge\",\n",
     "    \"sam\":    \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-simple-sam\",\n",
@@ -181,7 +180,6 @@
     "    \"gil\":    \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-simple-gil\",\n",
     "}\n",
     "\n",
-    "# Tier 2: FIFO queues subscribed to SNS topic (Sections 2-7)\n",
     "STUDENT_QUEUES = {\n",
     "    \"bilge\":  \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-node-bilge.fifo\",\n",
     "    \"sam\":    \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-node-sam.fifo\",\n",
@@ -199,7 +197,6 @@
     "\n",
     "CHAOS_QUEUE_URL = \"https://sqs.us-east-1.amazonaws.com/194722398367/ds2032-chaos-observer\"\n",
     "\n",
-    "# Validate student name\n",
     "assert MY_NAME in STUDENT_QUEUES, f\"Set MY_NAME to one of: {list(STUDENT_QUEUES.keys())}\"\n",
     "MY_SIMPLE_QUEUE_URL = SIMPLE_QUEUES[MY_NAME]   # Section 1 only\n",
     "MY_QUEUE_URL        = STUDENT_QUEUES[MY_NAME]   # Sections 2-7\n",
@@ -208,148 +205,208 @@
     "print(f\"Section 2+ queue (FIFO):  {MY_QUEUE_URL.split('/')[-1]}\")\n",
     "\n",
     "\n",
-    "# --- Sending Messages ---\n",
+    "# ── Formatting helpers ─────────────────────────────────────────────────────\n",
     "\n",
-    "def send_message(queue_url, body, group_id=\"default\"):\n",
-    "    \"\"\"Send a single message to an SQS FIFO queue.\n",
+    "def _print_request(action, **kwargs):\n",
+    "    \"\"\"Print an outgoing API call in a readable format.\"\"\"\n",
+    "    print(f\"\\n  ┌─ REQUEST → SQS:{action}\")\n",
+    "    for k, v in kwargs.items():\n",
+    "        # Truncate long values for readability\n",
+    "        display = str(v)\n",
+    "        if len(display) > 120:\n",
+    "            display = display[:117] + \"...\"\n",
+    "        print(f\"  │  {k}: {display}\")\n",
+    "    print(f\"  │\")\n",
     "\n",
-    "    Args:\n",
-    "        queue_url: The URL of the SQS queue.\n",
-    "        body: A dict that will be JSON-serialized.\n",
-    "        group_id: FIFO message group (messages in the same group are ordered).\n",
-    "\n",
-    "    Returns:\n",
-    "        The SQS response dict.\n",
-    "\n",
-    "    Docs: https://docs.aws.amazon.com/AWSSimpleQueueService/latest/APIReference/API_SendMessage.html\n",
-    "    \"\"\"\n",
-    "    return sqs.send_message(\n",
-    "        QueueUrl=queue_url,\n",
-    "        MessageBody=json.dumps(body),\n",
-    "        MessageGroupId=group_id,\n",
-    "    )\n",
-    "\n",
+    "def _print_response(resp):\n",
+    "    \"\"\"Print the interesting parts of an AWS response.\"\"\"\n",
+    "    meta = resp.get(\"ResponseMetadata\", {})\n",
+    "    print(f\"  │  HTTP Status : {meta.get('HTTPStatusCode')}\")\n",
+    "    print(f\"  │  Request ID  : {meta.get('RequestId', 'n/a')[:24]}...\")\n",
+    "    # Print any top-level keys that aren't ResponseMetadata\n",
+    "    for k, v in resp.items():\n",
+    "        if k == \"ResponseMetadata\":\n",
+    "            continue\n",
+    "        display = str(v)\n",
+    "        if len(display) > 120:\n",
+    "            display = display[:117] + \"...\"\n",
+    "        print(f\"  │  {k}: {display}\")\n",
+    "    print(f\"  └─ END RESPONSE\")\n",
     "\n",
     "\n",
+    "# ── Sending Messages ───────────────────────────────────────────────────────\n",
     "\n",
-    "def send_direct(queue_url, body):\n",
+    "def send_direct(queue_url, body, verbose=True):\n",
     "    \"\"\"Send a message to a standard (non-FIFO) SQS queue.\n",
-    "\n",
+    "    No MessageGroupId or deduplication.\n",
     "    Used in Section 1 with MY_SIMPLE_QUEUE_URL.\n",
-    "    No MessageGroupId or deduplication needed.\n",
     "    \"\"\"\n",
-    "    return sqs.send_message(\n",
+    "    payload = json.dumps(body)\n",
+    "    if verbose:\n",
+    "        _print_request(\"SendMessage\",\n",
+    "                        QueueUrl=queue_url.split(\"/\")[-1],\n",
+    "                        MessageBody=payload)\n",
+    "    resp = sqs.send_message(QueueUrl=queue_url, MessageBody=payload)\n",
+    "    if verbose:\n",
+    "        _print_response(resp)\n",
+    "    return resp\n",
+    "\n",
+    "\n",
+    "def send_message(queue_url, body, group_id=\"default\", verbose=True):\n",
+    "    \"\"\"Send a message to an SQS FIFO queue.\"\"\"\n",
+    "    payload = json.dumps(body)\n",
+    "    if verbose:\n",
+    "        _print_request(\"SendMessage\",\n",
+    "                        QueueUrl=queue_url.split(\"/\")[-1],\n",
+    "                        MessageBody=payload,\n",
+    "                        MessageGroupId=group_id)\n",
+    "    resp = sqs.send_message(\n",
     "        QueueUrl=queue_url,\n",
-    "        MessageBody=json.dumps(body),\n",
-    "    )\n",
-    "\n",
-    "def publish_to_topic(message, topic_arn=TOPIC_ARN, group_id=FIFO_MESSAGE_GROUP):\n",
-    "    \"\"\"Publish a message to the SNS FIFO topic (broadcast to all subscribers).\n",
-    "\n",
-    "    Args:\n",
-    "        message: A dict that will be JSON-serialized.\n",
-    "        topic_arn: The ARN of the SNS topic.\n",
-    "        group_id: FIFO message group for ordering.\n",
-    "\n",
-    "    Returns:\n",
-    "        The SNS response dict.\n",
-    "\n",
-    "    Docs: https://docs.aws.amazon.com/sns/latest/api/API_Publish.html\n",
-    "    \"\"\"\n",
-    "    return sns.publish(\n",
-    "        TopicArn=topic_arn,\n",
-    "        Message=json.dumps(message),\n",
+    "        MessageBody=payload,\n",
     "        MessageGroupId=group_id,\n",
     "    )\n",
+    "    if verbose:\n",
+    "        _print_response(resp)\n",
+    "    return resp\n",
     "\n",
     "\n",
-    "# --- Receiving Messages ---\n",
+    "def publish_to_topic(message, topic_arn=TOPIC_ARN, group_id=FIFO_MESSAGE_GROUP, verbose=True):\n",
+    "    \"\"\"Publish a message to the SNS FIFO topic (fan-out to all subscribers).\"\"\"\n",
+    "    payload = json.dumps(message)\n",
+    "    if verbose:\n",
+    "        _print_request(\"SNS:Publish\",\n",
+    "                        TopicArn=topic_arn.split(\":\")[-1],\n",
+    "                        Message=payload,\n",
+    "                        MessageGroupId=group_id)\n",
+    "    resp = sns.publish(\n",
+    "        TopicArn=topic_arn,\n",
+    "        Message=payload,\n",
+    "        MessageGroupId=group_id,\n",
+    "    )\n",
+    "    if verbose:\n",
+    "        _print_response(resp)\n",
+    "    return resp\n",
     "\n",
-    "def receive_messages(queue_url, max_messages=10, wait_seconds=5, delete=True):\n",
+    "\n",
+    "# ── Receiving Messages ─────────────────────────────────────────────────────\n",
+    "\n",
+    "def receive_messages(queue_url, max_messages=10, wait_seconds=5, delete=True, verbose=True):\n",
     "    \"\"\"Receive messages from an SQS queue.\n",
-    "\n",
-    "    Args:\n",
-    "        queue_url: The URL of the SQS queue.\n",
-    "        max_messages: Max messages per batch (1-10).\n",
-    "        wait_seconds: Long polling wait time (0-20).\n",
-    "        delete: If True, delete messages after receiving (acknowledge them).\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of parsed message body dicts.\n",
-    "\n",
-    "    Docs: https://docs.aws.amazon.com/AWSSimpleQueueService/latest/APIReference/API_ReceiveMessage.html\n",
+    "    Prints full message envelope (headers + body) before returning parsed bodies.\n",
     "    \"\"\"\n",
+    "    if verbose:\n",
+    "        _print_request(\"ReceiveMessage\",\n",
+    "                        QueueUrl=queue_url.split(\"/\")[-1],\n",
+    "                        MaxNumberOfMessages=min(max_messages, 10),\n",
+    "                        WaitTimeSeconds=wait_seconds)\n",
+    "\n",
     "    resp = sqs.receive_message(\n",
     "        QueueUrl=queue_url,\n",
     "        MaxNumberOfMessages=min(max_messages, 10),\n",
     "        WaitTimeSeconds=wait_seconds,\n",
+    "        AttributeNames=[\"All\"],           # get all system attributes\n",
+    "        MessageAttributeNames=[\"All\"],    # get all custom attributes\n",
     "    )\n",
+    "\n",
+    "    if verbose:\n",
+    "        meta = resp.get(\"ResponseMetadata\", {})\n",
+    "        print(f\"  │  HTTP Status : {meta.get('HTTPStatusCode')}\")\n",
+    "        print(f\"  │  Request ID  : {meta.get('RequestId', 'n/a')[:24]}...\")\n",
+    "\n",
+    "    raw_messages = resp.get(\"Messages\", [])\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(f\"  │  Messages returned: {len(raw_messages)}\")\n",
+    "\n",
     "    results = []\n",
-    "    for m in resp.get(\"Messages\", []):\n",
-    "        body = json.loads(m[\"Body\"])\n",
-    "        results.append(body)\n",
+    "    for i, m in enumerate(raw_messages):\n",
+    "        if verbose:\n",
+    "            print(f\"  │\")\n",
+    "            print(f\"  │  ── Message {i+1} ──────────────────────────────\")\n",
+    "            print(f\"  │  MessageId       : {m.get('MessageId')}\")\n",
+    "            print(f\"  │  ReceiptHandle   : {m.get('ReceiptHandle', '')[:32]}...\")\n",
+    "            attrs = m.get(\"Attributes\", {})\n",
+    "            if attrs:\n",
+    "                print(f\"  │  System Attributes:\")\n",
+    "                for k, v in attrs.items():\n",
+    "                    print(f\"  │    {k}: {v}\")\n",
+    "            msg_attrs = m.get(\"MessageAttributes\", {})\n",
+    "            if msg_attrs:\n",
+    "                print(f\"  │  MessageAttributes: {msg_attrs}\")\n",
+    "            print(f\"  │  Body (raw)      : {m.get('Body', '')[:200]}\")\n",
+    "\n",
+    "        # Parse the body — handle SNS envelope wrapping automatically\n",
+    "        raw_body = m.get(\"Body\", \"{}\")\n",
+    "        try:\n",
+    "            parsed = json.loads(raw_body)\n",
+    "            # If this came via SNS fan-out, unwrap the SNS envelope\n",
+    "            if isinstance(parsed, dict) and \"Message\" in parsed and \"Type\" in parsed:\n",
+    "                inner = json.loads(parsed[\"Message\"])\n",
+    "                if verbose:\n",
+    "                    print(f\"  │  Body (SNS unwrapped): {json.dumps(inner)[:200]}\")\n",
+    "                results.append(inner)\n",
+    "            else:\n",
+    "                results.append(parsed)\n",
+    "        except json.JSONDecodeError:\n",
+    "            results.append({\"_raw\": raw_body})\n",
+    "\n",
     "        if delete:\n",
     "            sqs.delete_message(QueueUrl=queue_url, ReceiptHandle=m[\"ReceiptHandle\"])\n",
+    "            if verbose:\n",
+    "                print(f\"  │  [deleted from queue]\")\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(f\"  └─ END RESPONSE\")\n",
+    "\n",
     "    return results\n",
     "\n",
     "\n",
-    "def receive_all(queue_url, max_total=200, timeout=30, delete=True):\n",
+    "def receive_all(queue_url, max_total=200, timeout=30, delete=True, verbose=False):\n",
     "    \"\"\"Receive ALL available messages from a queue (multiple batches).\n",
-    "\n",
-    "    Keeps reading until the queue is empty or limits are reached.\n",
-    "\n",
-    "    Args:\n",
-    "        queue_url: The URL of the SQS queue.\n",
-    "        max_total: Stop after this many messages.\n",
-    "        timeout: Stop after this many seconds.\n",
-    "        delete: If True, delete messages after receiving.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of parsed message body dicts.\n",
+    "    verbose=False by default here to avoid wall-of-text when draining many messages.\n",
     "    \"\"\"\n",
     "    all_msgs = []\n",
     "    start = time.time()\n",
     "    while len(all_msgs) < max_total and (time.time() - start) < timeout:\n",
-    "        batch = receive_messages(queue_url, max_messages=10, wait_seconds=3, delete=delete)\n",
+    "        batch = receive_messages(queue_url, max_messages=10, wait_seconds=3,\n",
+    "                                  delete=delete, verbose=verbose)\n",
     "        if not batch:\n",
     "            break\n",
     "        all_msgs.extend(batch)\n",
     "    return all_msgs\n",
     "\n",
     "\n",
-    "def drain_queue(queue_url):\n",
-    "    \"\"\"Remove all messages from a queue. Returns the count of drained messages.\"\"\"\n",
+    "def drain_queue(queue_url, verbose=True):\n",
+    "    \"\"\"Remove all messages from a queue. Returns the count drained.\"\"\"\n",
     "    count = 0\n",
     "    while True:\n",
-    "        batch = receive_messages(queue_url, max_messages=10, wait_seconds=1, delete=True)\n",
+    "        batch = receive_messages(queue_url, max_messages=10, wait_seconds=1,\n",
+    "                                  delete=True, verbose=False)\n",
     "        if not batch:\n",
     "            break\n",
     "        count += len(batch)\n",
+    "    if verbose:\n",
+    "        print(f\"[drain_queue] Removed {count} message(s) from {queue_url.split('/')[-1]}\")\n",
     "    return count\n",
     "\n",
     "\n",
-    "# --- ViewEvent Creation ---\n",
+    "# ── ViewEvent Creation ─────────────────────────────────────────────────────\n",
     "\n",
     "def create_view_event(host_id, content_id, ad_id):\n",
-    "    \"\"\"Create a ViewEvent dict with a unique ID and current timestamp.\n",
-    "\n",
-    "    This is the standard event format for the 2032 system.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Create a ViewEvent dict with a unique ID and current timestamp.\"\"\"\n",
     "    return {\n",
-    "        \"event_id\": str(uuid.uuid4()),\n",
-    "        \"host_id\": host_id,\n",
+    "        \"event_id\":   str(uuid.uuid4()),\n",
+    "        \"host_id\":    host_id,\n",
     "        \"content_id\": content_id,\n",
-    "        \"ad_id\": ad_id,\n",
-    "        \"timestamp\": datetime.now(timezone.utc).isoformat(),\n",
+    "        \"ad_id\":      ad_id,\n",
+    "        \"timestamp\":  datetime.now(timezone.utc).isoformat(),\n",
     "    }\n",
     "\n",
-    "\n",
-    "# --- Analysis ---\n",
+    "# ── Analysis ───────────────────────────────────────────────────────────────\n",
     "\n",
     "def count_by(events, field):\n",
     "    \"\"\"Count events by a given field. Returns a Counter.\"\"\"\n",
     "    return Counter(e.get(field, \"?\") for e in events)\n",
-    "\n",
     "\n",
     "def summarize_events(events, title=\"Event Summary\"):\n",
     "    \"\"\"Print a summary of events by host, content, and ad.\"\"\"\n",
@@ -362,7 +419,8 @@
     "            print(f\"    {val}: {cnt}\")\n",
     "\n",
     "\n",
-    "print(\"Helper functions loaded.\")"
+    "print(\"Helper functions loaded (verbose mode).\")\n",
+    "print(\"Tip: pass verbose=False to any function to silence the request/response output.\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -428,10 +486,10 @@
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "The `MessageId` is assigned by SQS â€” it is the queue's receipt for your message.\n",
+    " The `MessageId` is assigned by SQS it is the queue's receipt for your message.\n",
     "The `SequenceNumber` exists because this is a FIFO queue; it tells you where\n",
     "your message falls in the total ordering.\n",
     "\n",
@@ -439,8 +497,8 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "# 1A: Receive the message from YOUR queue\n",
     "\n",
@@ -482,8 +540,8 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "# YOUR TURN: Send your own custom message\n",
     "# Change the message content to whatever you want.\n",
@@ -493,6 +551,8 @@
     "    # Add your own fields here:\n",
     "    # \"favorite_number\": ???,\n",
     "    # \"languages\": ???,\n",
+    "    \"test\": str (uuid.uuid4())\n",
+    "\n",
     "}\n",
     "\n",
     "send_direct(MY_SIMPLE_QUEUE_URL, my_message)\n",
@@ -515,8 +575,18 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "drain_queue(MY_SIMPLE_QUEUE_URL)\n",
+    "print (\"Drained queue so we  can  start fresh.\")"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "# 1B: Send 10 numbered messages\n",
     "print(\"Sending 10 numbered messages...\")\n",
@@ -528,8 +598,8 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "# 1B: Receive them and check order\n",
     "time.sleep(1)\n",
