--- a/distributedforcs2026/week4/student_pubsub_lab.ipynb
+++ b/distributedforcs2026/week4/student_pubsub_lab.ipynb
@@ -571,7 +571,7 @@
     "### 1B: FIFO ordering\n",
     "\n",
     "FIFO means \"first in, first out.\" Let's prove it by sending 10 numbered messages\n",
-    "and checking that they arrive in the same order."
+    "and checking that they arrive in the same order. Unfortunately, we can't use the same queues as teh simple ones.. so lets see what happens for ordering."
    ]
   },
   {
@@ -615,12 +615,17 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": ""
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "With a FIFO queue, messages within the same **message group** are guaranteed\n",
-    "to arrive in order. We used `group_id=\"fifo-test\"` for all 10 messages,\n",
-    "so they share a group and maintain their sequence.\n",
+    "to arrive in order.\n",
+    "But....we didn't use that for this example Sorry .\n",
     "\n",
     "> **Key concept:** Ordering is not free. It requires coordination by the queue\n",
     "> service. Standard (non-FIFO) queues skip this coordination, which makes them\n",
@@ -628,46 +633,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "### Your Turn: Break the ordering\n",
     "\n",
-    "What happens if you send messages to **different message groups**?\n",
-    "FIFO ordering is only guaranteed *within* a group. Try it:"
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "# YOUR TURN: Send multiple messages and see what arrives\n",
-    "# Standard queues don't have message groups -- all messages share one pool.\n",
+    "# YOUR TURN: Enforce ordering manually on a standard queue\n",
     "\n",
-    "# Clear the queue first\n",
     "drain_queue(MY_SIMPLE_QUEUE_URL)\n",
     "\n",
-    "# Send 5 'A' messages and 5 'B' messages alternating\n",
-    "for i in range(1, 6):\n",
-    "    send_direct(MY_SIMPLE_QUEUE_URL, {\"group\": \"A\", \"seq\": i})\n",
-    "    send_direct(MY_SIMPLE_QUEUE_URL, {\"group\": \"B\", \"seq\": i})\n",
+    "# Step 1: Send 10 messages, each stamped with a sequence number\n",
+    "print(\"Sending 10 messages with sequence numbers...\")\n",
+    "for i in range(1, 11):\n",
+    "    send_direct(MY_SIMPLE_QUEUE_URL, {\"seq\": i, \"data\": f\"item-{i}\"}, verbose=False)\n",
+    "print(\"  Done.\\n\")\n",
     "\n",
     "time.sleep(1)\n",
-    "received = receive_all(MY_SIMPLE_QUEUE_URL, max_total=10, timeout=10)\n",
     "\n",
-    "print(\"Received order:\")\n",
-    "for m in received:\n",
-    "    print(f\"  Group {m['group']}, Seq {m['seq']}\")\n",
+    "# Step 2: Receive them — order is NOT guaranteed\n",
+    "raw = receive_all(MY_SIMPLE_QUEUE_URL, max_total=10, timeout=15, verbose=False)\n",
+    "raw_order = [m[\"seq\"] for m in raw]\n",
+    "print(f\"Wire order (what SQS gave us): {raw_order}\")\n",
+    "print(f\"In order?                      {raw_order == list(range(1, 11))}\")\n",
     "\n",
-    "# In Section 2 we'll use FIFO queues where group ordering is guaranteed.\n",
-    "# How does the ordering here compare to what you'd expect from FIFO?"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "# Step 3: Sort by seq number yourself\n",
+    "sorted_msgs = sorted(raw, key=lambda m: m[\"seq\"])\n",
+    "sorted_order = [m[\"seq\"] for m in sorted_msgs]\n",
+    "print(f\"\\nAfter client-side sort:        {sorted_order}\")\n",
+    "print(f\"In order now?                  {sorted_order == list(range(1, 11))}\")\n",
+    "\n",
+    "print(\"\"\"\n",
+    "Key insight:\n",
+    "  - The queue scrambled the messages, but we recovered the order by sorting.\n",
+    "  - This works, but it means your code must buffer ALL messages before\n",
+    "    processing any of them — you can't process message 3 until you know\n",
+    "    message 2 hasn't arrived yet.\n",
+    "  - FIFO queues (Section 2) eliminate this problem entirely. AWS enforces\n",
+    "    order so your code never has to wait or sort.\n",
+    "\"\"\")"
+   ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "### 1C: What happens if you don't delete?\n",
     "\n",
@@ -684,8 +701,10 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# 1C: Visibility timeout demo\n",
     "\n",
@@ -715,9 +734,7 @@
     "    print(\"  --> Now deleted for real.\")\n",
     "else:\n",
     "    print(\"Message did not reappear (might have been consumed by another reader).\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -860,12 +877,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "### Your Turn: Predict before you run\n",
     "\n",
-    "Before running the next cell, **write down your prediction**:\n",
+    "Before running the next cell, ** Thinks outloud about your prediction**:\n",
     "- If you publish 5 messages to the SNS topic, and there are 6 student queues\n",
     "  plus 3 auditor queues subscribed... how many total message copies will exist\n",
     "  across all queues?\n",
@@ -874,8 +891,10 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# 2B: Drain first, then publish 5 messages\n",
     "drain_queue(MY_QUEUE_URL)\n",
@@ -887,9 +906,7 @@
     "    print(f\"  Published #{i}\")\n",
     "\n",
     "time.sleep(2)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
@@ -933,12 +950,12 @@
     "# Section 3: I Am a Host\n",
     "\n",
     "*The year is 2032. The One Persona Act has changed how online advertising works.\n",
-    "Content creators â€” \"hosts\" â€” serve content and display ads. They get paid based\n",
+    "  \"Hosts\" serve content and display ads. They get paid based\n",
     "on verified view counts. But who verifies the views?*\n",
     "\n",
     "**You are a host.** When someone views your content and sees an ad, you need\n",
-    "to record that event. You publish a `ViewEvent` so that auditors â€” independent\n",
-    "observers â€” can verify the view actually happened.\n",
+    "to record that event. You publish a `ViewEvent` so that auditors  independent\n",
+    "observers  can verify the view actually happened.\n",
     "\n",
     "Your livelihood depends on accurate counts. If auditors miss views, you lose money.\n",
     "If they double-count, advertisers overpay. Everyone needs the numbers to be right."
@@ -1022,13 +1039,13 @@
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "### 3C: Reading as an auditor\n",
     "\n",
     "Those events went to the SNS topic and were delivered to every subscribed queue.\n",
-    "Now let's read from an **auditor queue** â€” a separate queue that exists solely\n",
+    "Now let's read from an **auditor queue** ” a separate queue that exists solely\n",
     "to observe and count events.\n",
     "\n",
     "Think of the auditor as an independent accountant. They watch the event stream\n",
@@ -1036,8 +1053,10 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# 3C: Read from an auditor queue\n",
     "time.sleep(2)\n",
@@ -1049,9 +1068,7 @@
     "    print(f\"  [{i+1}] host={e.get('host_id')}, content={e.get('content_id')}\")\n",
     "if len(auditor_events) > 10:\n",
     "    print(f\"  ... and {len(auditor_events) - 10} more\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
@@ -1138,13 +1155,17 @@
     "---\n",
     "# Section 4: Guarantees and Their Limits\n",
     "\n",
-    "So far, everything has worked perfectly. Messages arrived in order. Counts matched.\n",
-    "No duplicates. That is because we used **FIFO queues**, which AWS guarantees will:\n",
+    "You have now worked with **both types of SQS queues** without necessarily realizing it:\n",
     "\n",
-    "1. Deliver messages in order (within a message group)\n",
-    "2. Deduplicate identical messages (within a 5-minute window)\n",
+    "- **Section 1** used a **standard queue** (`ds2032-simple-{MY_NAME}`). You saw messages\n",
+    "  arrive out of order and had to sort them manually. Sending the same body twice would\n",
+    "  deliver it twice — no deduplication.\n",
     "\n",
-    "But these guarantees come with trade-offs.\n",
+    "- **Sections 2–3** used **FIFO queues** (`ds2032-node-{MY_NAME}.fifo`), which your\n",
+    "  SNS subscription delivers into. Messages arrived in order. No duplicates appeared.\n",
+    "  That cleanliness came from the queue type, not your code.\n",
+    "\n",
+    "\n",
     "\n",
     "### FIFO vs. Standard Queues\n",
     "\n",
@@ -1164,9 +1185,8 @@
     "\n",
     "### Visibility Timeout Revisited\n",
     "\n",
-    "You saw in Section 1 that undeleted messages reappear. Here is why this matters\n",
-    "for counting: if your auditor reads a message, starts counting it, but crashes\n",
-    "before deleting it â€” the message comes back. A second reader counts it again.\n",
+    "You saw in Section 1 that undeleted messages reappear.If your auditor reads a message, starts counting it, but crashes\n",
+    "before deleting it, the message comes back. A second reader counts it again.\n",
     "Now you have a **double count**.\n",
     "\n",
     "This is not a bug. It is a fundamental property of at-least-once delivery.\n",
@@ -1254,7 +1274,7 @@
     "But in the real 2032 system, you are one of many hosts. The SNS topic carries\n",
     "events from *all* hosts. Your auditor queue receives *everyone's* events.\n",
     "\n",
-    "**Your instructor has started a simulator** that publishes events from\n",
+    "**It's possible that I have  started a simulator** that publishes events from\n",
     "multiple simulated hosts. Let's see what your queue looks like now."
    ]
   },
@@ -1341,12 +1361,95 @@
     "---\n",
     "# Section 6: Something Is Wrong\n",
     "\n",
-    "Your instructor has set up a second environment â€” this one uses a **standard**\n",
+    "I've  has set up a second environment this one uses a **standard**\n",
     "(non-FIFO) queue. The chaos scripts have been running. Things that were reliable\n",
     "in the FIFO world no longer hold.\n",
     "\n",
     "In this section, you will read from the chaos queue and see what broke."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup: Seeding the Chaos Queue\n",
+    "\n",
+    "Normally I would run a script that floods the chaos queue with bad data before class.\n",
+    "If that did not happen, run the cell below to seed it yourself.\n",
+    "It intentionally injects duplicates, traffic spikes, and late timestamps\n",
+    "so you have something to detect in the exercises below.\n",
+    "\n",
+    "If the queue already has messages in it, skip this cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Section 6 setup: seed the chaos queue with intentionally bad data.\n",
+    "# Run this if the queue is empty. Skip it if messages are already there.\n",
+    "\n",
+    "import uuid, random, json\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "\n",
+    "CHAOS_HOSTS = [\"host-alpha\", \"host-beta\", \"host-gamma\", \"host-delta\"]\n",
+    "CONTENT_IDS = [\"show-001\", \"show-002\", \"show-003\"]\n",
+    "AD_IDS      = [\"ad-A\", \"ad-B\", \"ad-C\"]\n",
+    "\n",
+    "now = datetime.now(timezone.utc)\n",
+    "seeded = []\n",
+    "\n",
+    "# Normal events from balanced hosts\n",
+    "print(\"Seeding chaos queue...\")\n",
+    "\n",
+    "for i in range(20):\n",
+    "    e = {\n",
+    "        \"event_id\":  str(uuid.uuid4()),\n",
+    "        \"host_id\":   random.choice(CHAOS_HOSTS),\n",
+    "        \"content_id\": random.choice(CONTENT_IDS),\n",
+    "        \"ad_id\":     random.choice(AD_IDS),\n",
+    "        \"timestamp\": now.isoformat(),\n",
+    "    }\n",
+    "    sqs.send_message(QueueUrl=CHAOS_QUEUE_URL, MessageBody=json.dumps(e))\n",
+    "    seeded.append(e)\n",
+    "\n",
+    "# Inject duplicates: resend 5 events that already exist\n",
+    "for e in random.sample(seeded, 5):\n",
+    "    sqs.send_message(QueueUrl=CHAOS_QUEUE_URL, MessageBody=json.dumps(e))\n",
+    "\n",
+    "# Inject a traffic spike: one host sends way more than the others\n",
+    "for i in range(15):\n",
+    "    e = {\n",
+    "        \"event_id\":   str(uuid.uuid4()),\n",
+    "        \"host_id\":    \"host-alpha\",\n",
+    "        \"content_id\": random.choice(CONTENT_IDS),\n",
+    "        \"ad_id\":      random.choice(AD_IDS),\n",
+    "        \"timestamp\":  now.isoformat(),\n",
+    "    }\n",
+    "    sqs.send_message(QueueUrl=CHAOS_QUEUE_URL, MessageBody=json.dumps(e))\n",
+    "\n",
+    "# Inject late events: timestamps from 30 minutes ago\n",
+    "stale_ts = (now - timedelta(minutes=30)).isoformat()\n",
+    "for i in range(5):\n",
+    "    e = {\n",
+    "        \"event_id\":   str(uuid.uuid4()),\n",
+    "        \"host_id\":    random.choice(CHAOS_HOSTS),\n",
+    "        \"content_id\": random.choice(CONTENT_IDS),\n",
+    "        \"ad_id\":      random.choice(AD_IDS),\n",
+    "        \"timestamp\":  stale_ts,\n",
+    "    }\n",
+    "    sqs.send_message(QueueUrl=CHAOS_QUEUE_URL, MessageBody=json.dumps(e))\n",
+    "\n",
+    "total = 20 + 5 + 15 + 5\n",
+    "print(f\"Seeded {total} messages into chaos queue:\")\n",
+    "print(f\"  20 normal events\")\n",
+    "print(f\"   5 duplicates (same event_id sent twice)\")\n",
+    "print(f\"  15 spike events from host-alpha\")\n",
+    "print(f\"   5 late events (timestamp 30 minutes ago)\")\n",
+    "print(\"Now continue to the cells below.\")"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -1481,15 +1584,96 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Section 7: Multiple Auditors â€” Who Is Right?\n",
+    "# Section 7: Multiple Auditors  Who Is Right?\n",
     "\n",
     "If one auditor can miss events, get duplicates, or see inflated traffic,\n",
     "perhaps the answer is **more auditors**. If three independent observers\n",
     "each count the same events, you can compare their results.\n",
     "\n",
-    "Our system has three auditor queues â€” A, B, and C â€” all subscribed to\n",
+    "Our system has three auditor queues: A, B, and C all subscribed to\n",
     "the same topic. Let's see what each one saw and whether they agree."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup: Seeding the Auditor Queues\n",
+    "\n",
+    "I normally run a simulator before class that sends ViewEvents to the SNS topic,\n",
+    "which fans out into all three auditor queues. If that did not happen, run the\n",
+    "cell below to seed the auditor queues directly.\n",
+    "\n",
+    "The seed intentionally makes the three auditors see slightly different things,\n",
+    "which is the disagreement you will be resolving in the exercises.\n",
+    "\n",
+    "If the queues already have messages, skip this cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Section 7 setup: seed the auditor queues with mismatched data.\n",
+    "# Run this if the queues are empty. Skip if messages are already there.\n",
+    "\n",
+    "import uuid, random, json\n",
+    "from datetime import datetime, timezone\n",
+    "\n",
+    "HOSTS    = [\"host-north\", \"host-south\", \"host-east\", \"host-west\"]\n",
+    "CONTENTS = [\"show-001\", \"show-002\", \"show-003\"]\n",
+    "ADS      = [\"ad-A\", \"ad-B\", \"ad-C\"]\n",
+    "\n",
+    "now = datetime.now(timezone.utc).isoformat()\n",
+    "\n",
+    "# Generate a shared pool of 30 events that all auditors should see\n",
+    "shared_events = [\n",
+    "    {\n",
+    "        \"event_id\":   str(uuid.uuid4()),\n",
+    "        \"host_id\":    random.choice(HOSTS),\n",
+    "        \"content_id\": random.choice(CONTENTS),\n",
+    "        \"ad_id\":      random.choice(ADS),\n",
+    "        \"timestamp\":  now,\n",
+    "    }\n",
+    "    for _ in range(30)\n",
+    "]\n",
+    "\n",
+    "auditor_urls = list(AUDITOR_QUEUES.values())\n",
+    "\n",
+    "# Auditor A: receives all 30 events\n",
+    "for e in shared_events:\n",
+    "    sqs.send_message(QueueUrl=auditor_urls[0], MessageBody=json.dumps(e),\n",
+    "                     MessageGroupId=\"seed\")\n",
+    "\n",
+    "# Auditor B: receives all 30 events plus 3 duplicates\n",
+    "for e in shared_events:\n",
+    "    sqs.send_message(QueueUrl=auditor_urls[1], MessageBody=json.dumps(e),\n",
+    "                     MessageGroupId=\"seed\")\n",
+    "extras = random.sample(shared_events, 3)\n",
+    "for e in extras:\n",
+    "    # change event_id so dedup does not catch it\n",
+    "    dup = dict(e)\n",
+    "    dup[\"event_id\"] = str(uuid.uuid4())\n",
+    "    sqs.send_message(QueueUrl=auditor_urls[1], MessageBody=json.dumps(dup),\n",
+    "                     MessageGroupId=\"seed\")\n",
+    "\n",
+    "# Auditor C: receives only 25 events (5 dropped)\n",
+    "dropped = random.sample(shared_events, 5)\n",
+    "dropped_ids = {e[\"event_id\"] for e in dropped}\n",
+    "for e in shared_events:\n",
+    "    if e[\"event_id\"] not in dropped_ids:\n",
+    "        sqs.send_message(QueueUrl=auditor_urls[2], MessageBody=json.dumps(e),\n",
+    "                         MessageGroupId=\"seed\")\n",
+    "\n",
+    "print(\"Seeded auditor queues:\")\n",
+    "print(f\"  auditor-a: 30 events (complete)\")\n",
+    "print(f\"  auditor-b: 33 events (30 + 3 duplicates with new IDs)\")\n",
+    "print(f\"  auditor-c: 25 events (5 dropped)\")\n",
+    "print(\"Auditors will disagree. That is the point.\")\n",
+    "print(\"Now continue to the cells below.\")"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -1588,7 +1772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Bridge\n",
+    "###  What do we think?\n",
     "\n",
     "Right now, these three auditors are **SQS queues**. They have no relationship\n",
     "with each other. They do not know the others exist. They do not communicate\n",
@@ -1605,16 +1789,14 @@
     "2. **Communicate** directly with peers\n",
     "3. **Agree** on view counts without anyone being \"in charge\"\n",
     "\n",
-    "That is **peer-to-peer**. That is the next phase.\n",
+    "Lets' see ho this works in a  **peer-to-peer**. That is the next phase.\n",
     "\n",
     "---\n",
     "\n",
     "**End of Pub/Sub Lab.**\n",
     "You have seen queues, pub/sub, fan-out, ViewEvents, unreliable messaging,\n",
-    "chaos detection, multi-auditor comparison, and majority voting.\n",
-    "\n",
-    "The question you should be asking now:\n",
-    "*What if the auditors could talk to each other?*"
+    "chaos detection, multi-auditor comparison, and majority voting (sort of).\n",
+    "\n"
    ]
   }
  ]
